--- a/templates/base_home.html
+++ b/templates/base_home.html
@@ -2,4 +2,5 @@
 {% block title %}Website - Home{% endblock %}
 {% block content %}
 <h2>Home</h2>
+    <img src="https://media0.giphy.com/media/MdA16VIoXKKxNE8Stk/200w.webp?cid=ecf05e47vm62yr70cbhvxuz9pfjssrcqqfgddr3150u49kzi&rid=200w.webp&ct=g"></img>
 {% endblock %}
