Added basic table structure to base_child0.html

--- a/templates/base_child0.html
+++ b/templates/base_child0.html
@@ -1,5 +1,29 @@
 {% extends "base.html" %}
 {% block title %}Website - Child0{% endblock %}
 {% block content %}
-<h2>Child0</h2>
+    <h2>Child0</h2>
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Name</th>
+            <th scope="col">Some prop</th>
+            <th scope="col">Some other prop</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>ElectroSheepH21</td>
+            <td>...</td>
+            <td>...</td>
+        </tr>
+        <tr>
+            <th scope="row">2</th>
+            <td>Logn_99</td>
+            <td>...</td>
+            <td>...</td>
+        </tr>
+        </tbody>
+    </table>
 {% endblock %}
